--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -109,6 +109,36 @@ msgstr "Supervisor Europeo de Protección de Datos (SEPD)"
 msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
 msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=el"
 
+msgid "European Ombudsman"
+msgstr "Defensor del Pueblo Europeo"
+
+msgid "https://www.ombudsman.europa.eu/en/home"
+msgstr "https://www.ombudsman.europa.eu/es/home"
+
+msgid "European Data Protection Board"
+msgstr "Comité Europeo de Protección de Datos (CEPD)"
+
+msgid "https://edpb.europa.eu/edpb_en"
+msgstr "https://edpb.europa.eu/edpb_es"
+
+msgid "European Personnel Selection Office"
+msgstr "Oficina Europea de Selección de Personal"
+
+msgid "https://epso.europa.eu/home_en"
+msgstr "https://epso.europa.eu/home_es"
+
+msgid "Publications Office of the European Union"
+msgstr "Oficina de Publicaciones de la Unión Europea"
+
+msgid "https://op.europa.eu/en/home"
+msgstr "https://op.europa.eu/es/home"
+
+msgid "Agencies"
+msgstr "Agencias"
+
+msgid "https://europa.eu/european-union/about-eu/agencies_en"
+msgstr "https://europa.eu/european-union/about-eu/agencies_es"
+
 msgid "About this site"
 msgstr "Sobre este sitio"
 
