EWPP-1065: Let update fail if config is not there and fix pr translation for EPSO url.

--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -122,7 +122,7 @@ msgid "European Personnel Selection Office"
 msgstr "Serviço Europeu de Selecção do Pessoal das Comunidades Europeias"
 
 msgid "https://epso.europa.eu/home_en"
-msgstr "https://epso.europa.eu/home_pt"
+msgstr "https://epso.europa.eu/home_pt-pt"
 
 msgid "Publications Office of the European Union"
 msgstr "Serviço das Publicações da União Europeia"
