--- a/translations/oe_corporate_blocks-el.po
+++ b/translations/oe_corporate_blocks-el.po
@@ -171,7 +171,7 @@ msgid "Legal"
 msgstr "Νομικό πλαίσιο"
 
 msgid "Legal notice"
-msgstr "Νομική ανακοίνωση"
+msgstr "Ανακοίνωση νομικού περιεχομένου"
 
 msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
 msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_el"
